--- a/MVC/CIPlatform/CIPlatform/Views/Home/LostPass.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/LostPass.cshtml
@@ -165,7 +165,11 @@
     </section>
     <!-- Section: Split screen -->
 
-
+      <script>
+    if ( window.history.replaceState ) {
+        window.history.replaceState( null, null, window.location.href );
+    }
+</script>
 
 </body>
 </html>
