--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
@@ -211,7 +211,7 @@
 
     <body>
         <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
-            <div class="row img-story-list">
+            <div class="row img-story-list" style="background-image:">
 
                 <div class="col-12" style="text-align: center;">
                     
