--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/loginstyle.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/loginstyle.css
@@ -30,12 +30,28 @@ height: 30%; */
 }
 
 .form-label-email {
-    padding-top: 20%;
+    padding-top: 40%;
     margin-top: 5%;
     color: #414141;
     font-size: medium;
+    margin-left: 8%;
+    color: #414141;
 }
 
+.form-label {
+    margin-left: 8%;
+    color: #414141;
+    margin-top:-3%;
+}
+.form-control {
+   
+    
+    box-shadow: 0.97px 0.26px 3px #0000000D;
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    margin-left: 8%;
+    
+}
 .carousel-items {
     height: 100vh;
 }
