--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
@@ -110,6 +110,13 @@
     
 }
 
+.filterbox-sort {
+    width: 25%;
+    height: 100%;
+    padding-top: 22px;
+    margin-left: 52%;
+}
+
 .country {
     border-left: 1px solid rgb(236, 234, 234);
 }
@@ -276,8 +283,8 @@ hr {
 
 .line-hr {
     margin-bottom: -5%;
-    width: 113%;
-    margin-left: -6%;
+    width: 109%;
+    margin-left: -5%;
 }
 
 .card-line {
