--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -95,7 +95,8 @@
 
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Add Profile</a></li>
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="EditProfile">User Profile</a></li>
+                            
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
                             <li><hr class="dropdown-divider"></li>
