--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
 
-
-
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" integrity="sha384-PDcvo7sjvIljW+a9XkNG6y5U5+M0gfdWvpzPIbU6Z+uDiiZJg6pwqd+y9Xvn+fw/" crossorigin="anonymous">
 
     <link rel="stylesheet" href="~/css/platformlandingpage.css">
     <link rel="stylesheet" href="~/css/storylisting.css">
@@ -243,7 +243,7 @@
                             <label for="" class="form-label">My Profile</label>
                             <textarea id="profiletxt" class="form-control" rows="10" cols="5" placeholder="Enter your comments...">
                                 @ViewBag.ProfileText
-        </textarea>
+            </textarea>
                         </div>
                     </div>
                     <br />
@@ -252,7 +252,7 @@
                             <label for="" class="form-label">Why I Volunteer?</label>
                             <textarea id="why" class="form-control" rows="10" cols="5" placeholder="Enter your comments...">
                                 @ViewBag.WhyIVolunteer
-        </textarea>
+            </textarea>
                         </div>
 
                     </div>
@@ -324,14 +324,11 @@
                             <hr />
                             <div class="row">
 
-                                <div class="col skills-box form-label">
-                                    @{
-                                        foreach (var alluserSkills in ViewBag.userSkills)
-                                        {
-                                            <div class="skills">@alluserSkills.SkillName</div>
-                                        }
-                                    }
-                                </div>
+
+                                 <div class="col skills-box form-label">
+                                                        <select id="select-down" class="form-select" multiple>
+                                                        </select>
+                                                    </div>
 
                             </div>
                             <br />
@@ -355,59 +352,44 @@
                                             </button>
                                         </div>
                                         <div class="modal-body">
-
-                                            <div class="row" style="display:flex;">
-
-
-
-                                                <div class="row" style="margin-left:2%; padding-right:5%;">
-
-                                                    <div class="col-6 left-box" style="display:flex">
-
-                                                        <div>
-                                                            <select multiple id="skillList" class="mySkills" style="height:100%;">
-                                                                @{
-                                                                    foreach (var skills in ViewBag.skills)
-                                                                    {
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <select id="select-left" class="form-select" multiple>
+                                                            @{
+                                                                foreach (var skills in ViewBag.skills)
+                                                                {
 
 
-
-                                                                        <option id="@skills.SkillId" value="@skills.SkillName">@skills.SkillName</option>
-
+                                                                    <option id="@skills.SkillId" value="@skills.SkillName">@skills.SkillName</option>
 
 
-                                                                    }
                                                                 }
-                                                            </select>
+                                                            }
+                                                           
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-auto">
+                                                        <div class="d-flex flex-column">
+                                                            <button id="btn-add" type="button" class="btn btn-primary mb-2">&gt;</button>
+                                                            <button id="btn-remove" type="button" class="btn btn-primary">&lt;</button>
                                                         </div>
-
-
-
                                                     </div>
-                                                    <div class="col-6 right-box">
-
-                                                        <div id="selectedSkills" class="mySkillsclass"></div>
-
-
-
-
+                                                    <div class="col">
+                                                        <select id="select-right" class="form-select" multiple>
+                                                        </select>
                                                     </div>
-
-
                                                 </div>
-                                                <form asp-action="AddSkills" method="post">
-                                                    <input type="hidden" id="selectedSkillsInput" name="selectedSkills" />
-
-                                                </form>
-
                                             </div>
+
+
 
 
 
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary cancel-btn" data-dismiss="modal">Cancle</button>
-                                            <button type="button" onclick="saveSkills()" class="btn btn-primary save-btn">Save</button>
+                                            <button type="button" class="btn btn-secondary cancel-btn" data-dismiss="modal">Cancel</button>
+                                            <button type="button" id="btn-save" onclick="saveSkills()" class="btn btn-primary save-btn">Save</button>
                                         </div>
                                     </div>
                                 </div>
@@ -452,5 +434,43 @@
     </footer>
 
     <script src="~/js/landing.js"></script>
+
+
+
+
+
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-qnPhWW1r0hzM7OMJ8P5OOvHzT/8mk5FyZyZahlxg6esBtbH/d5Bh/kKoNJvZfQRV" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-5npSsdmc9zKo3qdq3OcWZC1gZ7Vzy+RCE+nI7VrTth8bT7TkkD/KtPFoLBENw0Yt" crossorigin="anonymous"></script>
+    <script>
+        // Get references to the select elements and buttons
+        const selectLeft = document.getElementById('select-left');
+        const selectRight = document.getElementById('select-right');
+        const btnAdd = document.getElementById('btn-add');
+        const btnRemove = document.getElementById('btn-remove');
+
+        // Add event listeners to the buttons
+        btnAdd.addEventListener('click', () => {
+          // Move selected options from left to right
+         
+          Array.from(selectLeft.selectedOptions).forEach(option => {
+            selectRight.appendChild(option);
+            
+          });
+        });
+
+        btnRemove.addEventListener('click', () => {
+          // Move selected options from right to left
+          Array.from(selectRight.selectedOptions).forEach(option => {
+            selectLeft.appendChild(option);
+          });
+        });
+    </script>
+
+
+
+
 </body>
 </html>
