--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
@@ -113,3 +113,23 @@
     border: 1px solid #D9D9D9;
     border-radius: 3px;
 }
+
+/*add skills*/
+
+.dual-list .list-group {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.dual-list .btn {
+    margin-bottom: 20px;
+}
+
+.dual-list .list-group-item {
+    cursor: pointer;
+}
+
+    .dual-list .list-group-item.active {
+        background-color: #007bff;
+        color: #fff;
+    }
